# ptypysql

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  Makefile  README.md  pyproject.toml  settings.ini
.github/workflows/: main.yml
docs/: _config.yml  additional_tests.html  core.html  format_file.html  index.html  sidebar.json  utils.html  validation.html
docs/_data/: topnav.yml
docs/_data/sidebars/: home_sidebar.yml
nbs/: 00_core.ipynb  01_format_file.ipynb  02_utils.ipynb  03_validation.ipynb  99_additional_tests.ipynb  index.ipynb
ptypysql/: __main__.py  _nbdev.py  core.py  format_file.py  utils.py  validation.py
sql_formatter/: _nbdev.py  core.py  format_file.py  utils.py
